<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DiceWear</string>
    <string name="dialog_title">Die Roll - d%1$d:</string>

    <!-- Dice Types -->
    <string name="d20">d20</string>
    <string name="d3">d3</string>
    <string name="d4">d4</string>
    <string name="d6">d6</string>
    <string name="d8">d8</string>
    <string name="d10">d10</string>
    <string name="d12">d12</string>
    <string name="d100">d100</string>

</resources>
